# Sim-s-City

./: .gitignore  CMakeLists.txt  README.md
.run/: Tests unitaires.run.xml
include/: affichage.h  bfs.h  jeu.h  menu_principal.h  sauvegarde.h  spritesheet.h  ui.h
include/screens/: gameplay.h
include/sim/: casernes.h  centrale.h  chateau.h  habitation.h  sim.h
include/utils/: capacite.h  grille.h  liste.h  vector.h
src/: affichage.c  bfs.c  gameplay.c  jeu.c  main.c  menu_principal.c  sauvegarde.c  spritesheet.c  ui.c
src/sim/: casernes.c  centrale.c  chateau.c  habitation.c  sim.c
src/utils/: capacite.c  grille.c  liste.c  vector.c
tests/: CMakeLists.txt  tests_liste.c  tests_vector.c
tests/sim/: test_sim_habitation.c
